--- a/Jungnami/Jungnami/SJ/Storyboard/Base.lproj/Main.storyboard
+++ b/Jungnami/Jungnami/SJ/Storyboard/Base.lproj/Main.storyboard
@@ -58,11 +58,8 @@
                                             <action selector="switchView:" destination="l0P-RT-O8r" eventType="touchUpInside" id="W54-pa-BOP"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VEO-Iy-Sro">
-                                        <rect key="frame" x="1" y="0.0" width="187.5" height="42"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="187.5" id="rAL-oW-FTh"/>
-                                        </constraints>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VEO-Iy-Sro">
+                                        <rect key="frame" x="0.0" y="0.0" width="187.5" height="42"/>
                                         <state key="normal" title="정당">
                                             <color key="titleColor" red="0.21176470589999999" green="0.7725490196" blue="0.94509803920000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
@@ -71,7 +68,7 @@
                                         </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2o3-ua-jWp">
-                                        <rect key="frame" x="52" y="39" width="84" height="3"/>
+                                        <rect key="frame" x="51.5" y="39" width="84" height="3"/>
                                         <color key="backgroundColor" red="0.21176470589999999" green="0.7725490196" blue="0.94509803920000002" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="84" id="0bp-Tn-3a9"/>
@@ -79,7 +76,7 @@
                                         </constraints>
                                     </view>
                                     <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MKw-o4-eRa">
-                                        <rect key="frame" x="239.5" y="39" width="84" height="3"/>
+                                        <rect key="frame" x="240" y="39" width="84" height="3"/>
                                         <color key="backgroundColor" red="0.21176470588235294" green="0.77254901960784317" blue="0.94509803921568625" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="3" id="DNf-kW-lvM"/>
@@ -101,6 +98,7 @@
                                     <constraint firstItem="VEO-Iy-Sro" firstAttribute="leading" secondItem="bTT-BB-xda" secondAttribute="leading" id="ZIV-ju-Syi"/>
                                     <constraint firstItem="2o3-ua-jWp" firstAttribute="centerX" secondItem="VEO-Iy-Sro" secondAttribute="centerX" id="oBK-UN-pa3"/>
                                     <constraint firstAttribute="height" constant="42" id="t3y-1h-4O6"/>
+                                    <constraint firstItem="VEO-Iy-Sro" firstAttribute="width" secondItem="bTT-BB-xda" secondAttribute="width" multiplier="1:2" id="vRd-1j-NbV"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -478,36 +476,35 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="64"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="강병원" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jby-xS-2Jg">
-                                            <rect key="frame" x="97" y="14.5" width="37" height="17"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="강병원" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jby-xS-2Jg">
+                                            <rect key="frame" x="91" y="15" width="36.5" height="17"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <color key="textColor" red="0.14901960784313725" green="0.14901960784313725" blue="0.14901960784313725" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NB4-ru-aTK">
-                                            <rect key="frame" x="12" y="25.5" width="20" height="13"/>
+                                            <rect key="frame" x="12" y="25.5" width="14" height="13"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="13" id="AUd-HX-LVY"/>
-                                                <constraint firstAttribute="width" constant="20" id="hly-vS-n7n"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                             <color key="textColor" red="0.21176470588235294" green="0.77254901960784317" blue="0.94509803921568625" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12위" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DVO-iz-zKu">
-                                            <rect key="frame" x="97" y="36.5" width="23.5" height="15"/>
+                                            <rect key="frame" x="91" y="36.5" width="23.5" height="15"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <color key="textColor" red="0.21176470589999999" green="0.7725490196" blue="0.94509803920000002" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="서울 은평구 을" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mb9-Ik-Khb">
-                                            <rect key="frame" x="123.5" y="36.5" width="69" height="15"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="서울 은평구 을" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mb9-Ik-Khb">
+                                            <rect key="frame" x="118" y="37" width="69" height="15"/>
                                             <fontDescription key="fontDescription" type="system" weight="light" pointSize="12"/>
                                             <color key="textColor" red="0.41960784313725491" green="0.41960784313725491" blue="0.41960784313725491" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="JTU-It-cIq">
-                                            <rect key="frame" x="45" y="12.5" width="39" height="39"/>
+                                            <rect key="frame" x="39" y="12.5" width="39" height="39"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="JTU-It-cIq" secondAttribute="height" multiplier="1:1" id="SBk-vF-7bk"/>
                                             </constraints>
@@ -524,6 +521,7 @@
                                     <constraints>
                                         <constraint firstItem="DVO-iz-zKu" firstAttribute="top" secondItem="jby-xS-2Jg" secondAttribute="bottom" constant="5" id="3ee-PV-APx"/>
                                         <constraint firstAttribute="trailing" secondItem="sCn-0h-Qoc" secondAttribute="trailing" constant="12" id="3yy-Op-WAN"/>
+                                        <constraint firstItem="sCn-0h-Qoc" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="jby-xS-2Jg" secondAttribute="trailing" constant="16" id="4vR-Xt-UBs"/>
                                         <constraint firstItem="NB4-ru-aTK" firstAttribute="leading" secondItem="vf1-G9-72L" secondAttribute="leading" constant="12" id="9zZ-ZK-4sg"/>
                                         <constraint firstItem="NB4-ru-aTK" firstAttribute="centerY" secondItem="vf1-G9-72L" secondAttribute="centerY" id="BcT-qZ-mKc"/>
                                         <constraint firstItem="JTU-It-cIq" firstAttribute="top" secondItem="vf1-G9-72L" secondAttribute="top" constant="12.5" id="G0C-Ef-dSl"/>
@@ -557,7 +555,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9vc-OR-9rt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2174" y="427"/>
+            <point key="canvasLocation" x="2173.5999999999999" y="425.93703148425789"/>
         </scene>
         <!--Search Legislator ResultTVC-->
         <scene sceneID="OJG-jJ-Cgf">
