--- a/Jungnami/Jungnami/SJ/Storyboard/Community.storyboard
+++ b/Jungnami/Jungnami/SJ/Storyboard/Community.storyboard
@@ -379,7 +379,7 @@
                                                     </constraints>
                                                     <state key="normal" image="community_scrap"/>
                                                 </button>
-                                                <imageView userInteractionEnabled="NO" tag="-1" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ckp-iF-jBD">
+                                                <imageView userInteractionEnabled="NO" tag="-1" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Content_gradient" translatesAutoresizingMaskIntoConstraints="NO" id="ckp-iF-jBD">
                                                     <rect key="frame" x="0.0" y="125.5" width="375" height="375"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="375" id="r3w-a7-MQW"/>
@@ -827,7 +827,7 @@
                                             </constraints>
                                             <state key="normal" image="community_scrap"/>
                                         </button>
-                                        <imageView userInteractionEnabled="NO" tag="-1" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="s0l-bP-mlU">
+                                        <imageView userInteractionEnabled="NO" tag="-1" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="s0l-bP-mlU">
                                             <rect key="frame" x="0.0" y="131.5" width="375" height="375"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="375" id="2AE-me-2Sc"/>
@@ -1837,6 +1837,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Content_gradient" width="375" height="667"/>
         <image name="community_bell" width="24" height="24"/>
         <image name="community_bell_blue_circle" width="16" height="16"/>
         <image name="community_character" width="55" height="54"/>
