--- a/Jungnami/Jungnami/SJ/Storyboard/Content.storyboard
+++ b/Jungnami/Jungnami/SJ/Storyboard/Content.storyboard
@@ -63,9 +63,8 @@
                                                                 <constraint firstAttribute="height" constant="375" id="IDO-Ec-ze9"/>
                                                             </constraints>
                                                         </imageView>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Content_gradient" translatesAutoresizingMaskIntoConstraints="NO" id="uU7-Mq-Ea3">
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Content_gradient" translatesAutoresizingMaskIntoConstraints="NO" id="uU7-Mq-Ea3">
                                                             <rect key="frame" x="0.0" y="0.0" width="375" height="375"/>
-                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="정나미" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CZo-83-3bc">
                                                             <rect key="frame" x="12" y="401" width="351" height="24"/>
@@ -77,6 +76,9 @@
                                                 </view>
                                                 <constraints>
                                                     <constraint firstItem="vrs-Yr-le8" firstAttribute="leading" secondItem="6m7-wz-eR1" secondAttribute="leading" id="0Y7-vI-ApM"/>
+                                                    <constraint firstItem="uU7-Mq-Ea3" firstAttribute="trailing" secondItem="vrs-Yr-le8" secondAttribute="trailing" id="3kr-ep-rVQ"/>
+                                                    <constraint firstItem="uU7-Mq-Ea3" firstAttribute="bottom" secondItem="vrs-Yr-le8" secondAttribute="bottom" id="7vS-YH-VTF"/>
+                                                    <constraint firstItem="uU7-Mq-Ea3" firstAttribute="top" secondItem="vrs-Yr-le8" secondAttribute="top" id="DzG-eG-Mt2"/>
                                                     <constraint firstAttribute="bottom" secondItem="QFO-HG-odi" secondAttribute="bottom" constant="81.5" id="RG1-By-eeK"/>
                                                     <constraint firstItem="vrs-Yr-le8" firstAttribute="centerX" secondItem="6m7-wz-eR1" secondAttribute="centerX" id="RNa-mm-C9L"/>
                                                     <constraint firstItem="QFO-HG-odi" firstAttribute="top" secondItem="CZo-83-3bc" secondAttribute="bottom" constant="6" id="cg9-Tx-Quk"/>
@@ -84,6 +86,7 @@
                                                     <constraint firstItem="vrs-Yr-le8" firstAttribute="top" secondItem="6m7-wz-eR1" secondAttribute="top" id="eC2-mb-IGg"/>
                                                     <constraint firstAttribute="trailing" secondItem="CZo-83-3bc" secondAttribute="trailing" constant="12" id="ljZ-1h-YYb"/>
                                                     <constraint firstAttribute="trailing" secondItem="vrs-Yr-le8" secondAttribute="trailing" id="oj1-fM-koA"/>
+                                                    <constraint firstItem="uU7-Mq-Ea3" firstAttribute="leading" secondItem="vrs-Yr-le8" secondAttribute="leading" id="siQ-BK-41l"/>
                                                     <constraint firstItem="CZo-83-3bc" firstAttribute="leading" secondItem="6m7-wz-eR1" secondAttribute="leading" constant="12" id="wEB-B8-2WM"/>
                                                 </constraints>
                                                 <size key="customSize" width="375" height="527"/>
